# capstone-project

./: CMakeLists.txt  CMakeLists.txt.user.2e9f187  CMakeLists.txt.user.c05d365  Databasemanager.cpp  Databasemanager.h  Provider.cpp  Provider.h  System.cpp  System.h  User.cpp  User.h  loginscreen.cpp  loginscreen.h  loginscreen.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  providerdashboard.cpp  providerdashboard.h  providerdashboard.ui  providers.txt  qtcsettings.cmake  service_finder.db  service_finder.sqbpro  users.txt  usersearch.cpp  usersearch.h  usersearch.ui
.qtcreator/: CMakeLists.txt.user~RFbd7ed76.TMP
ServiceFinder_Server/: CMakeLists.txt  Jsonhandler.cpp  Jsonhandler.h  main.cpp
client_app/: Booking.cpp  Booking.h  CMakeLists.txt  Databasemanager.cpp  Databasemanager.h  ProviderHomePage.h  System.cpp  System.h  User.h  loginscreen.cpp  loginscreen.h  loginscreen.ui  main.cpp  mainwindow.cpp  mainwindow.h  notifications.cpp  notifications.h  providerdashboard.cpp  providerdashboard.h  providerdashboard.ui  usersearch.cpp  usersearch.h
